--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@ header {
   <header>
     <h1><strong> Healthy & Psyched</strong></h1>
     <ul>
-      <li class="navtitle"><a href="Index.html">Home</a></li>
+      <li class="navtitle"><a href="index.html">Home</a></li>
       <li class="navtitle"><a href="#">About</a></li>
       <li class="navtitle"><a href="Blog1.html">Blog</a></li>
       <li class="navtitle"><a href="RecipesPage.html">Recipes</a></li>
